--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "flowbite-typography": "^1.0.3"
+        "flowbite-typography": "^1.0.3",
+        "swip": "^0.1.0",
+        "swiper": "^11.1.4"
     }
 }
